static/main.css
/*
* Copyright © 2020. TIBCO Software Inc.
* This file is subject to the license terms contained
* in the license file that is distributed with this file.
*/

body{ 
    margin: 0;
    overflow: hidden;
    background-color:unset !important;
}

.configIcon {
    fill:rgba(68, 68, 68, 0.3);
    top:15px !important;
    right: 25px !important;
    position: fixed !important;
}

.configIcon svg:hover{
    fill:rgba(68, 68, 68, 0.7)
}





/* configuration dialog */
#form .btn:focus{outline:none;border:none;box-shadow: none;}

#form{
    margin:1em;
    padding:1em;
}



/* background-color: #ececec;
border: 1px solid #b9b9b9;
width: 300px;
overflow-y: auto;
overflow-x: hidden;
box-shadow: #d7d7d7 2px 5px 10px 0px;
padding: 0 1em 1em 1em; */

#form {
    position: fixed;
    z-index: 10;
    right: 0px;
    top: 5px;
    
    width:fit-content;
    background:white;
    border:1px solid black;  
    border-top-width: 1px;
    border-right-width: 1px;
    border-bottom-width: 1px;
    border-left-width: 1px;
    border-top-color: #D8D9DC;
    border-right-color: #D8D9DC;
    border-bottom-color: #D8D9DC;
    border-left-color: #D8D9DC;
    background-color: #FFFFFF;
    padding-left: 40px;
    padding-right: 25px;

    font-size: 15px !important;
    font-family: "Roboto", Arial, Helvetica, sans-serif !important;
    font-weight: normal !important;

}

.fromCloseBtn {
    position: absolute;
    right: 15px;
    top: 10px;
    margin: 15px;
    cursor: pointer;
    z-index: 30;
}


#form h3{
    font-size: inherit;
    margin-left:-30px;
}

#form h3 label{    font-weight: bold;}


#form h3 label{ display:none;}

#form [role='tablist'] {
    justify-content:space-evenly;
    width: 250px;
}
#form #Plot .row:first-child {
    margin-top  :20px;
}

#form .nav.nav-tabs .active{
    font-weight: bold;
    border-bottom:1px solid gray;
}

.RoundedDropShadow {
    box-shadow: 0 3px 11px 0 rgba(0,0,0,.16),0 3px 6px 0 rgba(0,0,0,.16);
    border-radius: 6px;
}

#form button, .whiteButton {
    border: 1px solid #c9c9c9;
    border-radius: 3px;
    color: #fff;
    line-height: 1;
    cursor: pointer;
    background: linear-gradient(#fff,#f1f1f1);
    border-bottom-color: #b3b3b3;
    color: #000;
    font-size: 12px;
    padding: 4px;
    border-radius: 0;
}

#form .row:nth-child(6):before {
    content: "";
    border-bottom: 1px solid #D8D9DC;
    text-align: center;
    width: 90%;
    margin:15px 0 20px 0;
}

/* change plotly look and feel (marking rectangle) to fit spotfire style*/
.selectionlayer, rect.cursor-ew-resize,rect.cursor-ns-resize  {display: none;}

.select-outline{
    fill:#4a64cd42 !important;
    stroke:black !important;
    stroke-dasharray:0 !important;
    /* display: none !important; */
}
.zoombox-corners{display:none}

 
/* warning dialog */
#warningDialog {
    position: fixed;
    background: rgba(68, 68, 68, 0.3);
    z-index: 20;
    width: 100%;
    height: 100%;
    text-align: center;
    display: grid;
    align-items: center;
    align-content: center;
    justify-content: center;
}

#warningDialog span {
    background: white;
    color: black;
    text-align: center;
    display: grid;
    padding: 10px;
    border: 1px solid gray;
}


.infolayer g{
    transform-box: fill-box;
    transform-origin: right;
}


/*custom error*/
.error-layout {
    display: flex;
    width: 100%;
    position: absolute;
    left: 0px;
    top: 0px;
    height: 100%;
    text-align: center;
}

.spotfire-button-blue:hover {
    background-color: #5d6efa;
}
.error-container {
    position: absolute;
    width: 100%;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}
.error-text {
    margin: auto;
    padding: 8px;
}
.warning-row {
    margin-top: 16px;
    padding-left: 16px;
    padding-right: 16px;
    white-space: pre-line;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
}
.spotfire-button-flex {
    height: 32px;
    min-width: 112px;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: row;
    border-radius: 32px;
    cursor: pointer;
    padding-left: 16px;
    padding-right: 16px;
    box-sizing: border-box;
    margin: 4px 8px;
}
.spotfire-button-text {
    font: bold 13px "Roboto";
    display: inline;
    text-overflow: ellipsis;
    overflow: hidden;
}
.spotfire-button-blue {
    background-color: #7289f9;
    color: #ffffff;
}

.spotfire-button-white {
    color: #313336;
    background-color: #ffffff;
    border-width: 1px;
    border-style: solid;
    border-color: #d1d4de;
}

/*override plotly.js-style-global*/
.js-plotly-plot .plotly .cursor-crosshair {
    cursor: default !important;
}

.ttip{
    position: absolute;
    right: 100px;
}

.ttip:hover::after{
    position: absolute;
    right: 0;
    top: 24px;
    min-width: 200px;
    border: 1px #aaaaaa solid;
    border-radius: 10px;
    background-color: #ffffcc;
    padding: 12px;
    color: #000000;
    font-size: 14px;
    z-index: 1;
    content: attr(tooltip);
}

